--- a/indext.html
+++ b/indext.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-     <title>new-portpolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>new-portpolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1><span class="orange-color">Skip</span> The Diet</h1>
-    <h1>Just Eat Healthy</h1>
-    <h1>With Food Network</h1>
+    <section>
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span> The Diet</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>immagine you dont need a diet, because we provide a healthy and delicious food for you</p>
+            <a class="link-button" href="https://www.mcdonalds.it/" target="_blanks">order here</a>
+        </div>
+        <div class="half-width">
+            <img src="korima.png" alt="">
+        </div>
+    </section>
+    <section class="ground-banner">
+        <div class="half-width">
+            <img src="rohima.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel</p>
+            <a class="link-button" target="_blank" href="mailto:kaji.samsul123@gmail.com">contact me</a>
+        </div>
+    </section>
 </body>
+
 </html>
