--- a/indext.html
+++ b/indext.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
             <h1><span class="orange-color">Skip</span> The Diet</h1>
             <h1>Just Eat Healthy</h1>
@@ -25,7 +25,7 @@
             <img src="korima.png" alt="">
         </div>
     </section>
-    <section class="ground-banner">
+    <section class="ground-banner flexible-container">
         <div class="half-width">
             <img src="rohima.png" alt="">
         </div>
@@ -39,6 +39,56 @@
             <a class="link-button" target="_blank" href="mailto:kaji.samsul123@gmail.com">contact me</a>
         </div>
     </section>
+    <section class="recipies">
+        <div class="high-center">
+            <h2>my Recipies</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
+                Lorem Ipsum has been the industry's standard dummy text ever since <br> the
+                1500s.</p>
+        </div>
+        <div class="flexible-container">
+            <div class="recipie-title">
+                <img src="food1.jpg" alt="" width="220px" height="220">
+                <h3>Recipie Titles</h3>
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Lacus,
+                    fermentum amet faucibus sed id nisi
+                    lectus at</p>
+            </div>
+            <div class="recipie-title">
+                <img src="food2.png" alt="" width="220px" height="220">
+                <h3>Recipie Ttile</h3>
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Lacus,
+                    fermentum amet faucibus sed id nisi
+                    lectus at.</p>
+            </div>
+            <div class="recipie-title">
+                <img src="food3.jpg" alt="" width="220px" height="220">
+                <h3>Recipie Title</h3>
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Lacus,
+                    fermentum amet faucibus sed id nisi
+                    lectus at.</p>
+            </div>
+        </div>
+    </section>
+    <div class="followers">
+        <div class="flexible-container">
+            <div class="my-fun">
+                <h2>700k</h2>
+                <h6>youtube subscribers</h6>
+            </div>
+            <div class="my-fun">
+                <h2>2.1m</h2>
+                <h6>instagram follower</h6>
+            </div>
+            <div class="my-fun">
+                <h2>100k</h2>
+                <h6>dribble super like</h6>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
