--- a/indext.html
+++ b/indext.html
@@ -73,21 +73,27 @@
             </div>
         </div>
     </section>
-    <div class="followers">
-        <div class="flexible-container">
-            <div class="my-fun">
-                <h2>700k</h2>
-                <h6>youtube subscribers</h6>
-            </div>
-            <div class="my-fun">
-                <h2>2.1m</h2>
-                <h6>instagram follower</h6>
-            </div>
-            <div class="my-fun">
-                <h2>100k</h2>
-                <h6>dribble super like</h6>
+    <section>
+        <div class="followers">
+            <div class="flexible-container">
+                <div class="my-fun">
+                    <h2>700k</h2>
+                    <h6>youtube subscribers</h6>
+                </div>
+                <div class="my-fun">
+                    <h2>2.1m</h2>
+                    <h6>instagram follower</h6>
+                </div>
+                <div class="my-fun">
+                    <h2>100k</h2>
+                    <h6>dribble super like</h6>
+                </div>
             </div>
         </div>
+    </section>
+    <div class="last-line">
+        <h4><SPAN class="orange-color">FOOD</SPAN> <span class="gray-color">NETWORK</span></h4>
+        <small>Eat healthy to live healthy and live healthy to live to be happy</small>
     </div>
 </body>
 
