--- a/indext.html
+++ b/indext.html
@@ -92,7 +92,7 @@
         </div>
     </section>
     <div class="last-line">
-        <h4><SPAN class="orange-color">FOOD</SPAN> <span class="gray-color">NETWORK</span></h4>
+        <h4><span class="orange-color">FOOD</span> <span class="gray-color">NETWORK</span></h4>
         <small>Eat healthy to live healthy and live healthy to live to be happy</small>
     </div>
 </body>
